--- a/css/receipt.css
+++ b/css/receipt.css
@@ -50,3 +50,10 @@
     padding:10px;
     font-size:15px;
 }
+
+/*Checkout-fail*/
+
+#checkout-fail{
+    padding-top:15px;
+    text-align:center;
+}
