--- a/css/write-review.css
+++ b/css/write-review.css
@@ -103,9 +103,12 @@ form img{
 #review-store-wrapper{
     text-align: center;
     padding:30px;
+    margin-bottom: 50px;
 }
 #review-store-wrapper button .cancel{
-    background-color: rgba(0, 0, 0, 0.7);
+    border: 1px solid rgba(46, 10, 10, 0.5);
+    background-color: white;
+    color: black;
 }
 #review-store-wrapper button{
     font-size:17px;
@@ -114,7 +117,8 @@ form img{
     color:white;
     border-style:none;
     border-radius:10px;
-    background-color: rgba(0, 0, 0, 0.7);
+   
+    background-color: rgba(46, 10, 10, 0.5);
 }
 
 #review-store-wrapper button:hover{
