--- a/css/receipt.css
+++ b/css/receipt.css
@@ -1,6 +1,8 @@
 #receipt-box{
     padding-top:15px;
     text-align:center;
+    margin-bottom: 50px;
+    margin-top: 30px;
 }
 
 #receipt-box img{
@@ -37,16 +39,18 @@
     margin-top:10px;
     padding:10px;
     border-radius:10px;
-    border-style:solid;
-    border-color:rgb(127, 125, 125);
-    background-color:rgb(127, 125, 125);
+    border:none;
+    transition: background-colour 0.3s ease;
+    background-color: rgba(46, 10, 10, 0.5);
+    transition: transform 0.3s ease;
     color:white;
 }
 
 #receipt-box button:hover{
     cursor:pointer;;
-    border-color:rgb(73, 72, 72);
-    background-color:rgb(73, 72, 72);
+    background-color: rgba(0, 0, 0, 0.8);
+    transform: scale(1.1);
+    color: white;
     padding:10px;
     font-size:15px;
 }
