--- a/css/home-page.css
+++ b/css/home-page.css
@@ -1,4 +1,3 @@
-/*HOME PAGE styling - Humayra Hussain - 210005848*/
 *{
     margin: 0;
     padding: 0;
@@ -94,7 +93,7 @@ a:hover{
     transform: translate(-10px);
 }
 
-/*Resizing for half-screen (TP1 Feedback) Humayra Hussain 210005848 FOR ALL PAGES*/
+/*Resizing for half-screen */
 @media screen and (max-width:1100px){
     /*Navigation Bar*/
     .search input{
@@ -440,7 +439,7 @@ footer p{
     }
 }
 
-/*Product-details page styling - Humayra Hussain - 210005848*/
+/*Product-details page styling */
 .product-detail{
     width: 100%;
     position: relative;
@@ -602,7 +601,7 @@ footer p{
     columns: #666;
 }
 
-/*Products page styling - Humayra Hussain, 210005848*/
+/*Products page styling */
 .sorting form{
     margin: 20px;
     text-align: right;
@@ -614,7 +613,7 @@ footer p{
     padding: 5px;
 }
 
-/*Error messages - Humayra Hussain 210005848*/
+/*Error messages */
 .error-message {
     background-color: red;
     color: red;
@@ -713,7 +712,6 @@ th:last-child{
     transform: scale(1.1);
 }
 
-/*Mohammed Ali 220192905*/
 .welcome-message {
     font-size: 6px; 
     color: #e90606; 
@@ -732,13 +730,13 @@ th:last-child{
     float: right;
 }
 
-/*Error messages - Humayra Hussain 210005848*/
+/*Error messages */
 .product-row .error-message {
     background-color: rgb(247, 182, 182);
     color: red;
 }
 
-/*Admin styling - Humayra Hussain 210005848*/
+/*Admin styling */
 /*Pin Page*/
 .admin-pin{
     display: flex;
