--- a/css/login.css
+++ b/css/login.css
@@ -72,18 +72,7 @@ label {
     padding-bottom: 5px;
 }
 
-/*
-.button2{
-    background-color: rgba(36, 141, 233, 0.88);
-    color: white;
-    font-size: 18px;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
 
-*/
 
 .log-button:hover {
     background-color: rgba(0, 0, 0, 0.7);
@@ -192,7 +181,7 @@ a:hover{
     transform: translate(-10px);
 }
 
-/*Resizing for half-screen (TP1 Feedback) Humayra Hussain 210005848 FOR ALL PAGES*/
+/*Resizing for half-screen */
 @media screen and (max-width:1100px){
     /*Navigation Bar*/
     .search input{
